Bug 561199 - [14] [quick fix] Serializable record doesn't require a serialVersionUID
Change-Id: Ib22727590181bb936b067437da3b13489d504875